Update model to ResNet 50 11cl 448x448

--- a/models/v0.1-stage-3-50.cls
+++ b/models/v0.1-stage-3-50.cls
@@ -1,11 +1,11 @@
-fender_telecaster, "Fender Telecaster"
-gibson_les_paul, "Gibson Les Paul"
-gibson_es, "Gibson ES"
-gibson_explorer, "Gibson Explorer"
-gibson_flying_v, "Gibson Flying V"
+fender_jaguar, "Fender Jaguar"
+fender_jazzmaster, "Fender Jazzmaster"
 fender_mustang, "Fender Mustang"
 fender_stratocaster, "Fender Stratocaster"
-gibson_sg, "Gibson SG"
-fender_jaguar, "Fender Jaguar"
+fender_telecaster, "Fender Telecaster"
+gibson_ES, "Gibson ES"
+gibson_Flying_V, "Gibson Flying V"
+gibson_SG, "Gibson SG"
+gibson_explorer, "Gibson Explorer"
 gibson_firebird, "Gibson Firebird"
-fender_jazzmaster, "Fender Jazzmaster"
+gibson_les_paul, "Gibson Les Paul"
